force-app/main/default/objects/OrderLocation__c/OrderLocation__c.object-meta.xml
<CustomObject>
    <label>Order Location</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Location No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>