force-app/main/default/objects/OrderLocation__c/fields/Address_del__c.field-meta.xml
<CustomField>
    <fullName>Address_del__c</fullName>
    <formula>OrderH__r.CustomerH__r.Street_Address__c  &amp; &quot; &quot; &amp;  OrderH__r.CustomerH__r.City__c  &amp; &quot; &quot; &amp;  OrderH__r.CustomerH__r.State__c &amp;&quot; &quot;&amp; OrderH__r.CustomerH__r.Zip_Code__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>