force-app/main/default/objects/OrderLocation__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>OrderH__r.CustomerH__r.Zip_Code__c</formula>
    <label>Area</label>
    <type>Text</type>
</CustomField>