force-app/main/default/objects/OrderLocation__c/fields/Coverage_Radius_c__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Radius_c__c</fullName>
    <description>Calculate the distance between chef to customer address</description>
    <label>Coverage_Radius__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>