force-app/main/default/objects/OrderLocation__c/fields/Delivery_availability__c.field-meta.xml
<CustomField>
    <fullName>Delivery_availability__c</fullName>
    <formula>IF(Chef__r.Delivery_Radius__c  &lt;=  Coverage_Radius_c__c, true,false)</formula>
    <label>Delivery_availability</label>
    <type>Checkbox</type>
</CustomField>