force-app/main/default/objects/OrderLocation__c/fields/Order_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Time__c</fullName>
    <formula>OrderH__r.Order_Date_Time__c</formula>
    <label>Order Date/Time</label>
    <type>DateTime</type>
</CustomField>