force-app/main/default/objects/OrderLocation__c/fields/OrderH__c.field-meta.xml
<CustomField>
    <fullName>OrderH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderH</label>
    <referenceTo>OrderH__c</referenceTo>
    <relationshipLabel>Order Locations</relationshipLabel>
    <relationshipName>Order_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>