force-app/main/default/objects/OrderLocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Date_Time__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Area__c</columns>
    <columns>Address_del__c</columns>
    <columns>Delivery_availability__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>