force-app/main/default/objects/OrderLocation__c/listViews/my_list.listView-meta.xml
<ListView>
    <fullName>my_list</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Address_del__c</columns>
    <columns>Coverage_Radius_c__c</columns>
    <columns>Delivery_availability__c</columns>
    <filterScope>Mine</filterScope>
    <label>my list</label>
</ListView>